--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="gradient-background">
+  <div>
     
-        <h1>Grocery list </h1>
+        <h1>My Shopping List</h1>
     <center>
-        <table id="tbl">
+        <table id="item_id">
             <tr>
-              <th>Serial no.</th>
+              <th>Serial no</th>
               <th>Name</th>
               <th>Quantity</th>
               <th>Unit</th>
