--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div>
     
-        <h1>Shopping List</h1>
+        <h1>My Shopping List</h1>
     <center>
         <table id="item_id">
             <tr>
